--- a/src/app/farmer-payout-history/farmer-payout-history.component.html
+++ b/src/app/farmer-payout-history/farmer-payout-history.component.html
@@ -2,45 +2,53 @@
   <div *ngIf="payouts.getValue().length > 0" class="col-md-12">
     <div echarts [options]="chartOptions" [merge]="chartUpdateOptions" theme="default" class="recent-payouts-chart"></div>
   </div>
-  <div class="col-md-12">
+</div>
+<div class="row justify-content-end">
+  <div class="col-auto">
     <button *ngIf="payouts.getValue().length > 0" type="button" class="btn btn-outline-info btn-sm" style="margin-top: 0.5rem;float: right" (click)="exportCsv()">{{snippetService.getSnippet('download-csv-button.title')}}</button>
-    <table class="table table-responsive-lg table-dark dark-theme">
-      <thead>
-        <tr>
-          <th scope="col">
-            <div class="date-header-container">
-              <span>{{snippetService.getSnippet('payouts-component.headers.date')}}</span>
-              <fa-icon [icon]="faExchangeAlt" class="toggle-date-formatting-icon" (click)="toggleDateFormatting()"></fa-icon>
-            </div>
-          </th>
-          <th scope="col">{{snippetService.getSnippet('payouts-component.headers.transaction')}}</th>
-          <th scope="col">{{snippetService.getSnippet('payouts-component.headers.amount')}}</th>
-          <th scope="col">{{snippetService.getSnippet('payouts-component.headers.fiat-amount')}}</th>
-          <th scope="col">{{snippetService.getSnippet('payouts-component.headers.state')}}</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngIf="isLoading && payouts.getValue().length === 0">
-          <td colspan="5" style="text-align: center">
-            <app-loading-state></app-loading-state>
-          </td>
-        </tr>
-        <tr *ngIf="!isLoading && payouts.getValue().length === 0">
-          <td colspan="5" style="text-align: center; padding-top: 1rem">
-            <app-empty-state [text]="snippetService.getSnippet('payouts-component.no-payouts-sent-yet')" [icon]="faMoneyCheck"></app-empty-state>
-          </td>
-        </tr>
-        <tr *ngFor="let payout of (payoutsObservable | async); trackBy: trackPayoutById">
-          <td>{{payout.formattedPayoutDate}}</td>
-          <td>
-            <a *ngIf="payout.blockExplorerUrl !== undefined" href="{{payout.blockExplorerUrl}}" target="_blank" style="color: #b45bff">{{payout.coinId}}</a>
-            <span *ngIf="payout.blockExplorerUrl === undefined">{{payout.coinId}}</span>
-          </td>
-          <td>{{payout.amountFormatted}} {{poolConfig.ticker}}</td>
-          <td>{{payout.fiatAmountFormatted}}</td>
-          <td>{{payout.state}}</td>
-        </tr>
-      </tbody>
-    </table>
+  </div>
+</div>
+<div class="row">
+  <div class="col-12">
+    <div class="table-responsive-lg">
+      <table class="table dark-theme">
+        <thead>
+          <tr>
+            <th scope="col">
+              <div class="date-header-container">
+                <span>{{snippetService.getSnippet('payouts-component.headers.date')}}</span>
+                <fa-icon [icon]="faExchangeAlt" class="toggle-date-formatting-icon" (click)="toggleDateFormatting()"></fa-icon>
+              </div>
+            </th>
+            <th scope="col">{{snippetService.getSnippet('payouts-component.headers.transaction')}}</th>
+            <th scope="col">{{snippetService.getSnippet('payouts-component.headers.amount')}}</th>
+            <th scope="col">{{snippetService.getSnippet('payouts-component.headers.fiat-amount')}}</th>
+            <th scope="col">{{snippetService.getSnippet('payouts-component.headers.state')}}</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngIf="isLoading && payouts.getValue().length === 0">
+            <td colspan="5" style="text-align: center">
+              <app-loading-state></app-loading-state>
+            </td>
+          </tr>
+          <tr *ngIf="!isLoading && payouts.getValue().length === 0">
+            <td colspan="5" style="text-align: center; padding-top: 1rem">
+              <app-empty-state [text]="snippetService.getSnippet('payouts-component.no-payouts-sent-yet')" [icon]="faMoneyCheck"></app-empty-state>
+            </td>
+          </tr>
+          <tr *ngFor="let payout of (payoutsObservable | async); trackBy: trackPayoutById">
+            <td>{{payout.formattedPayoutDate}}</td>
+            <td>
+              <a *ngIf="payout.blockExplorerUrl !== undefined" href="{{payout.blockExplorerUrl}}" target="_blank" style="color: #b45bff">{{payout.coinId}}</a>
+              <span *ngIf="payout.blockExplorerUrl === undefined">{{payout.coinId}}</span>
+            </td>
+            <td>{{payout.amountFormatted}} {{poolConfig.ticker}}</td>
+            <td>{{payout.fiatAmountFormatted}}</td>
+            <td>{{payout.state}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
