--- a/src/app/leave-pool-modal/leave-pool-modal.component.scss
+++ b/src/app/leave-pool-modal/leave-pool-modal.component.scss
@@ -1,15 +1,9 @@
 .text-color {
   color: #474747;
 }
-.checkbox-lg .custom-control-label::before,
-.checkbox-lg .custom-control-label::after {
-  top: .6rem;
+.checkbox-lg .form-check-input {
   width: 1.35rem;
   height: 1.35rem;
-}
-
-.checkbox-lg .custom-control-label {
-  padding-top: 8px;
-  padding-left: 5px;
-  font-size: 1.1rem;
+  margin-right: 0.5rem;
+  margin-top: 0.15rem;
 }
