--- a/src/app/payouts/payouts.component.html
+++ b/src/app/payouts/payouts.component.html
@@ -1,49 +1,51 @@
 <h5>{{snippetService.getSnippet('payouts-component.title')}}</h5>
-<table class="table table-responsive-lg table-dark dark-theme">
-  <thead>
-  <tr>
-    <th scope="col">
-      <div class="date-header-container">
-        <span>{{snippetService.getSnippet('payouts-component.headers.date')}}</span>
-        <fa-icon [icon]="faExchangeAlt" class="toggle-date-formatting-icon" (click)="toggleDateFormatting()"></fa-icon>
-      </div>
-    </th>
-    <th scope="col">{{snippetService.getSnippet('payouts-component.headers.transaction')}}</th>
-    <th scope="col">{{snippetService.getSnippet('payouts-component.headers.amount')}}</th>
-    <th scope="col">{{snippetService.getSnippet('payouts-component.headers.state')}}</th>
-  </tr>
-  </thead>
-  <tbody>
-    <tr *ngIf="!lastPayouts">
-      <td colspan="4" style="text-align: center">
-        <app-loading-state></app-loading-state>
-      </td>
-    </tr>
-    <tr *ngIf="lastPayouts && lastPayouts.length === 0">
-      <td colspan="4" style="text-align: center; padding-top: 1rem">
-        <app-empty-state [text]="snippetService.getSnippet('payouts-component.no-payouts-sent-yet')" [icon]="faMoneyCheck"></app-empty-state>
-      </td>
-    </tr>
-  <tr *ngFor="let payout of lastPayoutsArray; trackBy: trackPayoutBy">
-    <td class="no-wrap">{{getPayoutDate(payout)}}</td>
-    <td class="no-wrap">
+<div class="table-responsive-lg">
+  <table class="table dark-theme">
+    <thead>
+      <tr>
+        <th scope="col">
+          <div class="date-header-container">
+            <span>{{snippetService.getSnippet('payouts-component.headers.date')}}</span>
+            <fa-icon [icon]="faExchangeAlt" class="toggle-date-formatting-icon" (click)="toggleDateFormatting()"></fa-icon>
+          </div>
+        </th>
+        <th scope="col">{{snippetService.getSnippet('payouts-component.headers.transaction')}}</th>
+        <th scope="col">{{snippetService.getSnippet('payouts-component.headers.amount')}}</th>
+        <th scope="col">{{snippetService.getSnippet('payouts-component.headers.state')}}</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngIf="!lastPayouts">
+        <td colspan="4" style="text-align: center">
+          <app-loading-state></app-loading-state>
+        </td>
+      </tr>
+      <tr *ngIf="lastPayouts && lastPayouts.length === 0">
+        <td colspan="4" style="text-align: center; padding-top: 1rem">
+          <app-empty-state [text]="snippetService.getSnippet('payouts-component.no-payouts-sent-yet')" [icon]="faMoneyCheck"></app-empty-state>
+        </td>
+      </tr>
+      <tr *ngFor="let payout of lastPayoutsArray; trackBy: trackPayoutBy">
+        <td class="no-wrap">{{getPayoutDate(payout)}}</td>
+        <td class="no-wrap">
       <span *ngFor="let coinId of getCoinIdsForPayout(payout); let lastCoinId = last">
         <a *ngIf="poolConfig.blockExplorerCoinUrlTemplate" href="{{getBlockExplorerCoinLink(coinId)}}" target="_blank" style="color: #b45bff">{{coinId}}</a>
         <span *ngIf="!poolConfig.blockExplorerCoinUrlTemplate">{{coinId}}</span>
         <span *ngIf="!splitMultiPayoutsByBreak && !lastCoinId">, </span>
         <br *ngIf="splitMultiPayoutsByBreak && !lastCoinId">
       </span>
-    </td>
-    <td class="no-wrap">
-      <span (click)="toggleShowPayout(payout)">{{getTotalPayout(payout.transactions)}} {{poolConfig.ticker}}</span>
-      <span *ngIf="showPayout(payout._id)">
+        </td>
+        <td class="no-wrap">
+          <span (click)="toggleShowPayout(payout)">{{getTotalPayout(payout.transactions)}} {{poolConfig.ticker}}</span>
+          <span *ngIf="showPayout(payout._id)">
         <span *ngFor="let data of getAddressAmountPairs(payout._id)">
           <br>
           {{data.address}}: {{data.amount}} {{poolConfig.ticker}}
         </span>
       </span>
-    </td>
-    <td class="no-wrap">{{getPaymentState(payout)}}</td>
-  </tr>
-  </tbody>
-</table>
+        </td>
+        <td class="no-wrap">{{getPaymentState(payout)}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
