--- a/src/app/update-difficulty-modal/update-difficulty-modal.component.html
+++ b/src/app/update-difficulty-modal/update-difficulty-modal.component.html
@@ -1,16 +1,14 @@
 <ng-template #updateDifficultyModal let-modal>
   <div class="modal-header">
     <h4 class="modal-title" style="color: #474747">Update your Farmer difficulty</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
   </div>
   <div class="modal-body">
     <div class="row">
       <div class="col-12">
-        <div class="custom-control custom-switch" style="padding-bottom: 0.5rem">
-          <input type="checkbox" class="custom-control-input" id="isFixedDifficultyCheckbox" [(ngModel)]="isFixedDifficulty">
-          <label class="custom-control-label text-color" for="isFixedDifficultyCheckbox" style="display: inline">Fixed difficulty</label>
+        <div class="form-check form-switch" style="padding-bottom: 0.5rem">
+          <input type="checkbox" class="form-check-input" role="switch" id="isFixedDifficultyCheckbox" [(ngModel)]="isFixedDifficulty">
+          <label class="form-check-label text-color-and-size" for="isFixedDifficultyCheckbox" style="display: inline">Fixed difficulty</label>
         </div>
       </div>
     </div>
