--- a/src/app/update-minimum-payout-modal/update-minimum-payout-modal.component.html
+++ b/src/app/update-minimum-payout-modal/update-minimum-payout-modal.component.html
@@ -1,9 +1,7 @@
 <ng-template #updateMinimumPayoutModal let-modal>
   <div class="modal-header">
     <h4 class="modal-title" style="color: #474747">{{snippetService.getSnippet('update-minimum-payout-modal.title')}}</h4>
-    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-      <span aria-hidden="true">&times;</span>
-    </button>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
   </div>
   <div class="modal-body">
     <div class="row">
@@ -19,9 +17,7 @@
             [class.is-invalid]="!isValidMinimumPayout"
             [(ngModel)]="newMinimumPayout"
           >
-          <div class="input-group-append">
-            <span class="input-group-text">{{ticker}}</span>
-          </div>
+          <span class="input-group-text">{{ticker}}</span>
           <div id="minimumPayoutFeedback" class="invalid-feedback">
             Minimum payout must be greater or equal to the pools minimum payout amount of {{poolConfigMinimumPayout}} {{ticker}}.
           </div>
