--- a/src/app/currency-selector/currency-selector.component.scss
+++ b/src/app/currency-selector/currency-selector.component.scss
@@ -1,7 +1,7 @@
 .currency-select {
   scrollbar-width: thin;
   scrollbar-color: rgba(155, 155, 155, 0.5) transparent;
-  max-width: 5rem;
+  width: 5em;
 }
 .currency-select::-webkit-scrollbar {
   width: 6px;
@@ -25,7 +25,7 @@
 .currency-select-rate-label {
   font-size: small;
 }
-@media (min-width: 1200px) and (max-width: 1575px) {
+@media (min-width: 1200px) and (max-width: 1522px) {
   .hide-on-smaller-screens {
     display: none;
   }
